--- a/templates/split.html
+++ b/templates/split.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color:#003366;color:white;height:650px">
              <p>Search helper</p>
-             <iframe id="if2" class="embed-responsive-item"  style="visibility:visible;width:100%;height:100%" src="http://arxiv.org/"></iframe>
+             <iframe id="if2" class="embed-responsive-item"  style="visibility:visible;width:100%;height:100%" src="http://scholar.google.co.in/"></iframe>
         </div>
       </div>
     </div>
