--- a/templates/split.html
+++ b/templates/split.html
@@ -26,8 +26,8 @@
             <iframe id="if1" class="embed-responsive-item" style="width:100%;visibility:visible;height:100%;" src="/graph"></iframe>
         </div>
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color:#003366;color:white;height:650px">
-             <p>Search helper</p>
-             <iframe id="if2" class="embed-responsive-item"  style="visibility:visible;width:100%;height:100%" src="http://scholar.google.co.in/"></iframe>
+            <p>Search helper</p>
+            <iframe id="if2" class="embed-responsive-item"  style="visibility:visible;width:100%;height:100%" src=""></iframe>
         </div>
       </div>
     </div>
