--- a/templates/graph.html
+++ b/templates/graph.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Song Networks: Interative Network Tutorial</title>
+  <title>Virgil | Navigator for Academic Papers</title>
   <meta name="description" content="Demo for How to Build an Interactive Network Visualization.">
   <meta name="author" content="Jim Vallandingham">
 
@@ -26,21 +26,21 @@
 
   <div id="container" class="container">
     <header>
-    <h1>Similar Song Networks</h1>
-    <p>Songs similar to one another according to <a href="http://www.last.fm/api">last.fm</a> are linked together. Song nodes are sized based on playcounts, and colored by artist.</p>
+    <h1>Virgil:  An Academic Paper Navigator</h1>
+    <p>An uploaded set of academic papers are evaluated and sorted by similarity. Focus on your topic of interest, or push your boundaries.</p>
     </header>
 
       <div id="song_selection" class="control">
-        <h3>Song</h3>
+        <h3>Paper Collection:</h3>
         <select id="song_select">
           <option value="test_papers.json">Test Papers</option>
-          <option value="call_me_al.json">You Can Call Me Al</option>
+          <!--<option value="call_me_al.json">You Can Call Me Al</option>
           <option value="sledgehammer_2_rounds.json">Sledgehammer</option>
           <option value="poker_face.json">Poker Face</option>
           <option value="jolene.json">Jolene</option>
           <option value="helplessness_blues.json">Helplessness Blues</option>
           <option value="she_said.json">She Said She Said</option>
-          <option value="short_skirt.json">Short Skirt, Long Jacket</option>
+          <option value="short_skirt.json">Short Skirt, Long Jacket</option>-->
         </select>
 
       </div>
