Quick last commit before freeze!

--- a/templates/graph.html
+++ b/templates/graph.html
@@ -40,8 +40,8 @@
           <option value="jolene.json">Jolene</option>
           <option value="helplessness_blues.json">Helplessness Blues</option>
           <option value="she_said.json">She Said She Said</option>
-          <option value="short_skirt.json">Short Skirt, Long Jacket</option>-->
-        </select>
+          <option value="short_skirt.json">Short Skirt, Long Jacket</option>--
+>        </select>
 
       </div>
     <div id="controls">
